@@ -50,5 +50,6 @@ REL1_10_2:
  - Added 'ShowRedirectPageText' extension
  - Added 'InterWikiLinkManager' extension
  - Correction & enhancement to ExtensionClass
- - Correction & enhancement to ViewsourceRight 
+ - Correction & enhancement to ViewsourceRight
+ - Integration of 'SidebarEx' 
  
